--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@astrojs/image": "0.13.0",
 		"@astrojs/mdx": "^0.15.1",
+		"@astrojs/partytown": "^1.2.0",
 		"@astrojs/sitemap": "^1.0.0",
 		"@astrojs/tailwind": "3.0.0",
 		"@resvg/resvg-js": "^2.2.0",
