--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,7 @@
   status = 302
   force = true
 
+[[redirects]]
   from = "/itaydafna-dev.netlify.app/*"
   to = "https://www.itaydafna.dev/:splat"
   status = 301
