--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"prettier": "^2.8.3",
 		"prettier-plugin-astro": "0.8.0",
 		"prettier-plugin-tailwindcss": "^0.2.2",
+		"reading-time": "^1.5.0",
 		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.4",
 		"stylelint-config-standard": "^29.0.0",
