--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react",
+    "skipLibCheck": true,
   },
   "exclude": [
     "node_modules",
